@@ -9,6 +9,7 @@
 * Tweak - Include page URL information in the SSL-required log for the Stripe Express Checkout Element.
 * Fix - Fix ECE modal not loading on pay for order page when coupon is applied.
 * Fix - Do not load express payment buttons on switch subscription page.
+* Fix - Resolve a fatal error by casting product price and subscription sign up fee to 'float' while adding them.
 * Fix - Return 'is_live' as true in account summary response when test mode is disabled in gateway settings and charge is enabled in Stripe account.
 * Fix - Prevents notices being displayed on WordPress 6.7 due to loading translations too early (only shown on stores with WP_DEBUG enabled).
 * Tweak - Update links to plugin documentation and Stripe documentation.
